--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
           <div class = "row">
             <div class="col-sm">
-              <a class="navbar-brand end" href="/#"><img class = "image" src=""></a>
+              <a class="navbar-brand end" href="/#"><img class = "image" src="https://i.postimg.cc/3w36kmn0/Fake-News-Full-Size.png"></a>
             </div>
             <div class="col-sm">
               <a class="navbar-brand end" href="/#">Fake News Recognizer</a>
@@ -49,7 +49,7 @@
           <div class="collapse navbar-collapse d-flex justify-content-end end" id="navbarNavAltMarkup">
             <div class="navbar-nav navbar-custom">
               <a class="nav-link" aria-current="page" href="/#">Home</a>
-              <a class="nav-link" href="/real-world">About</a>
+              <a class="nav-link" href="/about">About</a>
             </div>
           </div>
         </div>
