--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,13 @@
 {% block content %}
 
 <div>
-<h1 class = "text-center">This is the results page.</h1>
-<h1 class = "text-center text header">What the model predicted: {{model_prediction}}</h1>
+<h1 class = "text-center">Check out if the news you're reading is fake.</h1>
+<h2 class = "text-center"> What the model predicted: {{model_prediction}}</h2>
+    {% if model_prediction <0.5 %}
+        <h2 class = "text-center"> We predicted the news that you're reading to be fake. </h2>
+    {% else %}    
+    <h2 class ="text-center">We predicted that the news you're reading is not fake.</h2>
+    {% endif %}
+
 </div>
 {% endblock %}
