Made changes to templates

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,32 @@
 {% extends 'base.html' %}
 {% block title %} About {% endblock %}
 {% block content %}
-<h1>Welcome to the About Page</h1>
+<body>
+    <style>
+        body {
+          background-image: url('https://i.postimg.cc/pLKrWb6X/pexels-brotin-biswas-518543.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-position: center;
+          background-size: 100% 100%;
+        }
+        .text {
+        font-family: 'Helvetica';
+        text-align: center;
+        color: ivory;
+      }
+      .header {
+        font-size:3vw;
+      }
+      .para {
+        margin-left: 20%;
+        margin-right: 20%;
+        font-size:2vw;
+      }
+
+        </style>
+<div>
+<h1 class = "text-center text"> The Problem of Fake News</h1>
+</div>
+</body>
 {% endblock %}
