--- a/templates/about.html
+++ b/templates/about.html
@@ -15,10 +15,10 @@
         text-align: center;
         color: ivory;
       }
-      .header {
+      header {
         font-size:3vw;
       }
-      .para {
+      p {
         margin-left: 20%;
         margin-right: 20%;
         font-size:2vw;
@@ -26,7 +26,13 @@
 
         </style>
 <div>
-<h1 class = "text-center text"> The Problem of Fake News</h1>
+    <h1 class = "text-center text"> The Problem of Fake News</h1>
+    <p class = "text">That’s Fake! is a browser extension which helps prevent the spread of misinformation.
+        The extension will look at the site to tell you how accurate the information is. 
+        That’s Fake! will be useful to anybody on the internet and especially to those 
+        who frequently read their news on their laptop since 52% of Americans say they see fake news online regularly. 
+        That’s Fake! is easy to use and only needs one click to see if an article is accurate.
+    </p>
 </div>
 </body>
 {% endblock %}
